<resources>
    <string name="app_name">Openday</string>
    <string name="openday_teachers">Openday Teachers</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_your_number">Please enter your phone number to login.</string>
    <string name="proceed_to_login">Proceed to login</string>
    <string name="dont_have_an_account">Do not have an account? Request one</string>
    <string name="here"><u>here.</u></string>
    <string name="mobile_number">eg.8769564345</string>
    <string name="enter_your_password">Please enter your password below</string>
    <string name="password_hint">Green94</string>
    <string name="let_me_in">Let me in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_with_otp"><u>Login with OTP</u></string>
    <string name="search_student_by_name_or_roll_number">Search student by name or roll no</string>
    <string name="broadcast_msg_part_one">Mail will be sent to </string>
    <string name="broadcast_msg_part_two">regarding absence of the</string>
    <string name="students">students</string>
    <string name="confirm_send">Confirm &amp; Send</string>
    <string name="subject_of_the_email">Subject of the mail</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="okay_got_it">Ok, Got It!</string>
</resources>
