<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:text="@string/openday_teachers"
        android:textColor="@color/black"
        android:textSize="@dimen/text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        fontPath="Roboto-Bold.ttf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="95dp" />

    <TextView
        android:id="@+id/teachers_name"
        android:text="Neha Kapoor"
        android:textColor="@color/light_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:textSize="@dimen/text_xtra_large_sp"
        fontPath="Roboto-Regular.ttf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteY="138dp" />

    <TextView
        android:id="@+id/textView3"
        android:text="@string/enter_your_password"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/text_xtra_large_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/margin_small"
        fontPath="Roboto-Regular.ttf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teachers_name"
        tools:layout_editor_absoluteY="186dp" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:textColor="@color/black"
        android:textSize="@dimen/text_xtra_large_sp"
        android:background="@drawable/edit_text_box_background"
        android:hint="@string/password_hint"
        android:letterSpacing="0.07"
        fontPath="Roboto-Regular.ttf"
        android:paddingLeft="8dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteY="231dp" />

    <TextView
        android:id="@+id/let_me_in"
        android:text="@string/let_me_in"
        android:textSize="@dimen/text_xtra_large_sp"
        android:textColor="@color/blue_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        fontPath="Roboto-Regular.ttf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password"
        tools:layout_editor_absoluteY="329dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="32dp"
        android:text="@string/forgot_password"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/text_large_sp"
        fontPath="Roboto-Regular.ttf"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_with_otp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_with_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_otp"
        android:textColor="@color/blue_color"
        android:textSize="@dimen/text_large_sp"
        fontPath="Roboto-Regular.ttf"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        tools:layout_editor_absoluteX="258dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"/>

    <include
        android:id="@+id/progressBar"
        layout="@layout/progressbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>